[project]
authors = [{ name = "James O'Claire" }]
name = "cenus-wiki"
description = "Build Wikipedia Tables for USA Census data"
version = "0.0.1"

[project.optional-dependencies]
dev = ["pre-commit"]

dependencies = ["us", "census", "xlrd", "requests", "pandas"]

[build-system]
requires = ["setuptools", "wheel"]


[tool.ruff]
target-version = "py312"
# Rules, see: https://docs.astral.sh/ruff/rules/
# select = [
#     "E",  # errors
#     "W",  # pycodestyle Warnings
#     "F",  # PyFlake
#     "B",  # flake8-bugbear rules
#     "I",  # import sort
#     "N",  # PEP8 naming rules
#     "UP", # pyupgrade, warnings for common mistakes for new versions
#     #"D", # pydocstyle, all funcs have docstring
# ]
select = ["ALL"]

ignore = [
    "E501",   # line length
    "PD901",  # Pandas dataframes called 'df'
    "ERA001", # no commented out code
    "D211",   # one-blank-line-before-class, conflict with D203
    "D213",   # multi-line-summary-second-line, conflict with D212
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

fixable = ["I", "F", "COM"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
